--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,15 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans : var(--font-open-sans) ;
+  --font-podcast : var(--font-podcast) ;
+  --spacing-authMw : 488px ;
+  --spacing-authYPadding : 59px ;
+  --spacing-whiteSpacing : 250px ;
+  --color-brandOrange : #FA8B02 ;
+  --color-gray600 : #FFFFFF33 ;
+  --color-gray333: #333333 ; 
+  --color-pink200 : #FFFFFF4D ;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
